name:                basbull
version:             0.1.0.0
synopsis:            Processing some csv data 
description:         Baseball data analysis
homepage:            https://github.com/tharkad/basbull#readme
license:             BSD3
license-file:        LICENSE
author:              Mike Houser
maintainer:          tharkad@casdra.com
copyright:           2016, Mike Houser
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable basbull
  ghc-options          -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       vector,
                       cassava
